[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
version = "0.01"
name=  "algotester2array"
description= "A module for converting AlgoTester 2 Vector array to python list."
authors= [{name = "whyDEDUS" , email="whitistudio@gmail.com"}]
requires-python = ">=3.7"